--- a/html5-playground/package.json
+++ b/html5-playground/package.json
@@ -10,6 +10,7 @@
   "author": "Johannes Hoppe",
   "license": "None",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "lite-server": "^2.5.4",
     "roboto-fontface": "^0.10.0"
