--- a/html5-playground/package.json
+++ b/html5-playground/package.json
@@ -5,14 +5,21 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "lite-server"
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack -p"
   },
-  "author": "Johannes Hoppe",
-  "license": "None",
   "dependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0",
-    "lite-server": "^2.5.4",
-    "roboto-fontface": "^0.10.0"
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
