--- a/book-rating/package.json
+++ b/book-rating/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@ngrx/effects": "^8.5.0",
+    "@ngrx/schematics": "^8.5.0",
+    "@ngrx/store": "^8.5.0",
+    "@ngrx/store-devtools": "^8.5.0",
     "@syncfusion/ej2-angular-calendars": "^17.3.26",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
